--- a/servoo_shipping/views/shipping_bl_view.xml
+++ b/servoo_shipping/views/shipping_bl_view.xml
@@ -52,8 +52,11 @@
                             <field name="loading_port" />
                             <field name="discharge_port" />
                         </group>
+                        <group string="Cargo Description">
+                            <field name="cargo_description" colpsan="4" nolabel="1" required="1"/>
+                        </group>
                         <notebook>
-                            <page string="Goods Description">
+                            <page string="Goods Details">
                                 <field name="good_ids" widget="one2many" required="1" mode="tree,form">
                                     <tree string="Good">
                                         <field name="name"/>
