--- a/servoo_logistic/views/operation_view.xml
+++ b/servoo_logistic/views/operation_view.xml
@@ -13,11 +13,29 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="view_servoo_logistic_operation_nature_form">
+            <field name="name">servoo.logistic.operation.nature.from</field>
+            <field name="model">servoo.logistic.operation.nature</field>
+            <field name="arch" type="xml">
+                <form string="Operation Nature">
+                    <sheet>
+                            <group col="4">
+                               <field name="name" />
+                                <field name="sequence_code" required="1" />
+                            </group>
+                            <group string="Description" col="4">
+                                <field name="description" colspan="4" nolabel="1"/>
+                            </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
         <record model="ir.actions.act_window" id="actions_operation_nature">
             <field name="name">Operation Nature</field>
             <field name="res_model">servoo.logistic.operation.nature</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
             <field name="domain">[]</field>
             <field name="help" type="html">
