--- a/servoo_stevedoring/views/document_view.xml
+++ b/servoo_stevedoring/views/document_view.xml
@@ -3,7 +3,7 @@
     <data>
         <record model="ir.ui.view" id="view_document_type_tree">
             <field name="name">view.document.type.tree</field>
-            <field name="model">servoo.shipping.document.type</field>
+            <field name="model">servoo.stevedoring.document.type</field>
             <field name="arch" type="xml">
                 <tree string="Documents Type" editable="bottom">
                     <field name="name" />
@@ -14,7 +14,7 @@
 
         <record model="ir.actions.act_window" id="action_document_type">
             <field name="name">Documents Type</field>
-            <field name="res_model">servoo.shipping.document.type</field>
+            <field name="res_model">servoo.stevedoring.document.type</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree</field>
         </record>
@@ -22,7 +22,7 @@
 
         <record model="ir.ui.view" id="view_document_tree">
             <field name="name">view.document.tree</field>
-            <field name="model">servoo.shipping.document</field>
+            <field name="model">servoo.stevedoring.document</field>
             <field name="arch" type="xml">
                 <tree string="Documents">
                     <field name="name" />
@@ -36,7 +36,7 @@
 
         <record model="ir.ui.view" id="view_document_form">
             <field name="name">view.document.form</field>
-            <field name="model">servoo.shipping.document</field>
+            <field name="model">servoo.stevedoring.document</field>
             <field name="arch" type="xml">
                 <form string="Document">
                     <sheet>
@@ -63,7 +63,7 @@
 
         <record model="ir.actions.act_window" id="action_documents">
             <field name="name">Documents</field>
-            <field name="res_model">servoo.shipping.document</field>
+            <field name="res_model">servoo.stevedoring.document</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
