--- a/servoo_stevedoring/views/stevedoring_menu.xml
+++ b/servoo_stevedoring/views/stevedoring_menu.xml
@@ -5,19 +5,23 @@
                    groups="servoo_stevedoring.stevedoring_group_user"
             web_icon="servoo_stevedoring,static/description/icon.png"/>
 
-        <menuitem id="stevedoring_menu" name="Stevedoring" parent="stevedoring_menu_root" sequence="1"/>
+            <menuitem id="stevedoring_menu" name="Stevedoring" parent="stevedoring_menu_root" sequence="1"/>
+            <menuitem id="stevedoring_op_menu" name="Operations" parent="stevedoring_menu_root" sequence="2"/>
 
-        <menuitem id="stevedoring_formality_menu" action="servoo_stevedoring.action_formalities" parent="stevedoring_menu_root" sequence="19"/>
-        <menuitem id="stevedoring_document_menu" action="servoo_stevedoring.action_documents" parent="stevedoring_menu_root" sequence="20"/>
+                <menuitem id="stevedoring_operation_menu" action="servoo_stevedoring.action_stevedoring_operation" parent="stevedoring_op_menu" sequence="1"/>
+                <menuitem id="stevedoring_outturn_report_menu" action="servoo_stevedoring.actions_outturn_report" parent="stevedoring_op_menu" sequence="2"/>
+                <menuitem id="stevedoring_bl_menu" parent="stevedoring_op_menu" action="servoo_shipping.action_shipping_bl" />
+                <menuitem id="stevedoring_formality_menu" action="servoo_stevedoring.action_formalities" parent="stevedoring_op_menu" sequence="19"/>
+                <menuitem id="stevedoring_document_menu" action="servoo_stevedoring.action_documents" parent="stevedoring_op_menu" sequence="20"/>
 
-        <menuitem id="menu_stevedoring_config"
-            name="Configuration"
-            parent="stevedoring_menu_root"
-            sequence="35"
-            groups="servoo_stevedoring.stevedoring_group_user"/>
+            <menuitem id="menu_stevedoring_config"
+                name="Configuration"
+                parent="stevedoring_menu_root"
+                sequence="35"
+                groups="servoo_stevedoring.stevedoring_group_user"/>
 
-        <menuitem id="menu_formality_type_config" action="servoo_stevedoring.action_formality_type" parent="menu_stevedoring_config" />
-        <menuitem id="menu_action_document_type_config" action="servoo_stevedoring.action_document_type" parent="menu_stevedoring_config" />
+                <menuitem id="menu_formality_type_config" action="servoo_stevedoring.action_formality_type" parent="menu_stevedoring_config" />
+                <menuitem id="menu_action_document_type_config" action="servoo_stevedoring.action_document_type" parent="menu_stevedoring_config" />
 
         
 
