--- a/servoo_stevedoring/views/operation_view.xml
+++ b/servoo_stevedoring/views/operation_view.xml
@@ -22,7 +22,7 @@
             <field name="arch" type="xml">
                 <form string="Operation">
                     <sheet>
-                        <group>
+<!--                        <group>-->
                             <group col="4">
                                 <field name="name" />
                                 <field name="stevedoring_file_id" required="1"/>
@@ -31,7 +31,7 @@
                                 <field name="operation_nature" />
                                 <field name="name_of_responsible" />
                             </group>
-                        </group>
+<!--                        </group>-->
                         <notebook>
                             <page string="Operation Lines">
                                 <field name="operation_line_ids" widget="one2many" mode="tree,form" required="1">
